--- a/index.html
+++ b/index.html
@@ -24,7 +24,36 @@
         </ul>
       </div>
       <div class="ironman-img"></div>
-      <img src="images-removebg-preview.png" alt="" />
+      <a
+        href="https://www.hollywoodreporter.com/news/general-news/marvels-iron-man-secret-comic-831133/"
+        target="_blank"
+        ><img src="Iron pic 1.png" alt="" height="250" width="250"
+      /></a>
+    </section>
+    <!-- section-2 -->
+    <section class="part-2">
+      <div class="tony-img">
+        <a
+          href="https://vrscout.com/news/marvels-iron-man-vr-is-coming-to-quest-2/"
+          target="_blank"
+        >
+          <img src="Iron.png" alt=""
+        /></a>
+      </div>
+      <div class="details">
+        <h1>About Me</h1>
+        <p>
+          Iron Man, a Marvel superhero, is Tony Stark, a brilliant inventor and
+          CEO of Stark Industries. After being captured by terrorists, he
+          creates a high-tech exoskeleton suit, granting him superhuman
+          abilities. This suit enables flight, super strength, and advanced
+          weaponry. Stark's transformation represents a journey of redemption as
+          he uses his technology for good, becoming a key member of the
+          Avengers. In the Marvel Cinematic Universe, he's portrayed by Robert
+          Downey Jr. Iron Man is known for his intelligence, wit, and occasional
+          playboy persona.
+        </p>
+      </div>
     </section>
   </body>
 </html>
