--- a/index.html
+++ b/index.html
@@ -55,5 +55,52 @@
         </p>
       </div>
     </section>
+    <!-- section 3 -->
+    <div class="part-3">
+      <h1>What I Do</h1>
+    </div>
+    <div class="marvel">
+      <div class="square">
+        <a
+          href="https://en.wikipedia.org/wiki/Iron_Man%27s_armor_%28Marvel_Cinematic_Universe%29"
+          target="_blank"
+          ><img src="icon 1.png" alt="" height="50" width="50"
+        /></a>
+        <h2>Engineering Marvels</h2>
+        <p>
+          Tony Stark, as the CEO of Stark Industries, pioneers cutting-edge
+          technology. His creations range from state-of-the-art weaponry to
+          advanced medical devices. Notably, he engineers the iconic Iron Man
+          suit, a technological marvel that grants superhuman abilities.
+        </p>
+      </div>
+      <div class="square">
+        <a href="https://www.imdb.com/title/tt0371746/" target="_blank">
+          <img src="Icon 2.png" alt="" height="50" width="50"
+        /></a>
+        <h2>Superhero Vigilance</h2>
+        <p>
+          As Iron Man, Stark fights crime and defends the world from various
+          threats. Equipped with his powered exoskeleton, he can fly, possesses
+          immense strength, and wields an arsenal of high-tech weaponry. His
+          vigilance as a superhero contributes significantly to global security.
+        </p>
+      </div>
+      <div class="square">
+        <a href="https://www.thefactsite.com/iron-man-facts/" target="_blank"
+          ><img src="Icon 3.png" alt="" height="50" width="50"
+        /></a>
+        <h2>Philanthropic Endeavors:</h2>
+        <p>
+          Beyond his exploits as Iron Man, Tony Stark dedicates resources to
+          philanthropic causes. He establishes the Stark Foundation, funding
+          projects that address environmental issues, promote education, and
+          advance healthcare. Stark's philanthropy reflects his commitment to
+          making a positive impact on the world.
+        </p>
+      </div>
+    </div>
+    <!-- section 3 -->
+    <footer>All Right Reserved Tony Stark @2022</footer>
   </body>
 </html>
